[gd_scene load_steps=5 format=2]

[ext_resource path="res://Grid/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/Level.gd" type="Script" id=2]
[ext_resource path="res://LevelGUI/LevelGUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tiles/Grassland.tres" type="Resource" id=4]

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Grid" parent="." instance=ExtResource( 1 )]
position = Vector2( 100, 100 )
height = 5
default_tile = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelGUI" parent="CanvasLayer" instance=ExtResource( 3 )]
[connection signal="action_changed" from="." to="CanvasLayer/LevelGUI" method="on_action_changed"]
[connection signal="air_quality_changed" from="." to="CanvasLayer/LevelGUI" method="on_air_quality_changed"]
[connection signal="soil_quality_changed" from="." to="CanvasLayer/LevelGUI" method="on_soil_quality_changed"]
[connection signal="take_action" from="." to="." method="on_take_action"]
[connection signal="turn_changed" from="." to="CanvasLayer/LevelGUI" method="on_turn_changed"]
[connection signal="water_quality_changed" from="." to="CanvasLayer/LevelGUI" method="on_water_quality_changed"]
[connection signal="change_air_quality" from="Grid" to="." method="on_Grid_change_air_quality"]
[connection signal="change_soil_quality" from="Grid" to="." method="on_Grid_change_soil_quality"]
[connection signal="change_water_quality" from="Grid" to="." method="on_Grid_change_water_quality"]
[connection signal="tile_clicked" from="Grid" to="." method="on_tile_clicked"]
[connection signal="tile_hovered" from="Grid" to="." method="on_tile_hovered"]
[connection signal="tile_clicked" from="CanvasLayer/LevelGUI" to="." method="on_LevelGUI_tile_clicked"]
